--- a/project/views/layouts/home.hbs
+++ b/project/views/layouts/home.hbs
@@ -38,11 +38,23 @@
               <div class="collapse navbar-collapse" id="ftco-nav">
                   <ul class="navbar-nav ml-auto">
                       <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-<!--                      <li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
                       <li class="nav-item"><a href="/places" class="nav-link">Places</a></li>
-<!--                      <li class="nav-item"><a href="/hotel" class="nav-link">Hotels</a></li>-->
-<!--                      <li class="nav-item"><a href="/car_rent" class="nav-link">Car Rent</a></li>-->
-                      <li class="nav-item"><a href="/signin_signout" class="nav-link">Sign in</a></li>
+
+                      {{#if user}}
+                          <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" style="color: #ceb51b" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  <b>{{user.hoten}}</b>
+                              </a>
+                              <div class="dropdown-menu" aria-labelledby="userDropdown">
+                                  <div class="dropdown-divider"></div> <a class="dropdown-item" href="/logout">Đăng xuất</a>
+                              </div>
+                          </li>
+
+                      {{else}}
+                          <li class="nav-item">
+                              <a href="/signin_signout" class="nav-link">Sign in</a>
+                          </li>
+                      {{/if}}
                   </ul>
               </div>
           </div>
