--- a/project/views/layouts/home.hbs
+++ b/project/views/layouts/home.hbs
@@ -52,6 +52,9 @@
 
                       {{else}}
                           <li class="nav-item">
+                              <a href="/register" class="nav-link">Register</a>
+                          </li>
+                          <li class="nav-item">
                               <a href="/signin_signout" class="nav-link">Sign in</a>
                           </li>
                       {{/if}}
