feat(auth):Thêm 'Cập nhật mật khẩu' bên người dùng

--- a/project/views/layouts/home.hbs
+++ b/project/views/layouts/home.hbs
@@ -49,6 +49,8 @@
                                   {{# if isAdmin}}
                                       <div class="dropdown-divider"></div> <a class="dropdown-item" href="/admin">Admin</a>
                                   {{/if}}
+
+                                  <div class="dropdown-divider"></div> <a class="dropdown-item" href="/update_password">Đổi mật khẩu</a>
                                   <div class="dropdown-divider"></div> <a class="dropdown-item" href="/logout">Đăng xuất</a>
                               </div>
                           </li>
