feat(location): Thêm 'Quản lý địa điểm' ở admin

--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -55,6 +55,9 @@
                     <li>
                         <a href="/admin/managetour">Tour</a>
                     </li>
+                    <li>
+                        <a href="/admin/managelocations">Địa điểm</a>
+                    </li>
                 </ul>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
