feat(vehicle): Thêm 'quản lý phương tiện' ở admin

--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -58,6 +58,9 @@
                     <li>
                         <a href="/admin/managelocations">Địa điểm</a>
                     </li>
+                    <li>
+                        <a href="/admin/managevehicle">Phương tiện</a>
+                    </li>
                 </ul>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
