feat(hotel): thêm 'quản lý khách sạn' ở admin

--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -61,6 +61,9 @@
                     <li>
                         <a href="/admin/managevehicle">Phương tiện</a>
                     </li>
+                    <li>
+                        <a href="/admin/managehotel">Đối tác khách sạn</a>
+                    </li>
                 </ul>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
