--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -53,6 +53,9 @@
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseComponents">
                     <li>
+                        <a href="/admin/manageschedule">Lịch trình</a>
+                    </li>
+                    <li>
                         <a href="/admin/managetour">Tour</a>
                     </li>
                     <li>
