feat(user-bookingHistory): Thêm trang và đổ data

--- a/project/views/layouts/home.hbs
+++ b/project/views/layouts/home.hbs
@@ -49,7 +49,7 @@
                                   {{# if isAdmin}}
                                       <div class="dropdown-divider"></div> <a class="dropdown-item" href="/admin">Admin</a>
                                   {{/if}}
-
+                                  <div class="dropdown-divider"></div> <a class="dropdown-item" href="/profile">Thông tin - Lịch sử</a>
                                   <div class="dropdown-divider"></div> <a class="dropdown-item" href="/update_password">Đổi mật khẩu</a>
                                   <div class="dropdown-divider"></div> <a class="dropdown-item" href="/logout">Đăng xuất</a>
                               </div>
