--- a/project/views/layouts/home.hbs
+++ b/project/views/layouts/home.hbs
@@ -76,13 +76,12 @@
           <div class="container">
               <div class="row mb-5">
                   <div class="col-md">
-                      <div class="ftco-footer-widget mb-4">
-                          <h2 class="ftco-heading-2">Adventure</h2>
-                          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                          <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                      <div class="ftco-footer-widget mb-4 ml-md-4">
+                          <h2 class="ftco-heading-2">South VietNam</h2>
+                          <ul class="list-unstyled">
+                              <li><p class="py-2 d-block">Đồ án thực tập chuyên nghành</p></li>
+                              <li><p class="py-2 d-block">Giáo viên: Trần Quốc Trường</p></li>
+                              <li><p class="py-2 d-block">Sinh viên: Nguyễn Đình Phương</p></li>
                           </ul>
                       </div>
                   </div>
@@ -90,13 +89,9 @@
                       <div class="ftco-footer-widget mb-4 ml-md-4">
                           <h2 class="ftco-heading-2">Information</h2>
                           <ul class="list-unstyled">
-                              <li><a href="#" class="py-2 d-block">About Us</a></li>
-                              <li><a href="#" class="py-2 d-block">Online enquiry</a></li>
-                              <li><a href="#" class="py-2 d-block">Call Us</a></li>
-                              <li><a href="#" class="py-2 d-block">General enquiries</a></li>
-                              <li><a href="#" class="py-2 d-block">Booking Conditions</a></li>
-                              <li><a href="#" class="py-2 d-block">Privacy and Policy</a></li>
-                              <li><a href="#" class="py-2 d-block">Refund policy</a></li>
+                              <li><p class="py-2 d-block">Nguyễn Đình Phương</p></li>
+                              <li><p class="py-2 d-block">DH52201277</p></li>
+                              <li><p class="py-2 d-block">D22_TH14</p></li>
                           </ul>
                       </div>
                   </div>
@@ -104,12 +99,11 @@
                       <div class="ftco-footer-widget mb-4">
                           <h2 class="ftco-heading-2">Experience</h2>
                           <ul class="list-unstyled">
-                              <li><a href="#" class="py-2 d-block">Beach</a></li>
-                              <li><a href="#" class="py-2 d-block">Adventure</a></li>
-                              <li><a href="#" class="py-2 d-block">Wildlife</a></li>
-                              <li><a href="#" class="py-2 d-block">Honeymoon</a></li>
-                              <li><a href="#" class="py-2 d-block">Nature</a></li>
-                              <li><a href="#" class="py-2 d-block">Party</a></li>
+                              <li><p class="py-2 d-block">Bãi biển</p></li>
+                              <li><p class="py-2 d-block">Khám phá</p></li>
+                              <li><p class="py-2 d-block">Du lịch</p></li>
+                              <li><p class="py-2 d-block">Nghỉ dưỡng</p></li>
+                              <li><p class="py-2 d-block">Tiệc tùng</p></li>
                           </ul>
                       </div>
                   </div>
@@ -118,9 +112,9 @@
                           <h2 class="ftco-heading-2">Have a Questions?</h2>
                           <div class="block-23 mb-3">
                               <ul>
-                                  <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                                  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+                                  <li><span class="icon icon-map-marker"></span><span class="text">Trường Đại học Công Nghệ Sài Gòn (STU)</span></li>
+                                  <li><span class="icon icon-phone"></span><span class="text">0123456789</span></li>
+                                  <li><span class="icon icon-envelope"></span><span class="text">phuong@gmail.com</span></li>
                               </ul>
                           </div>
                       </div>
