ui(add-vehicle): Bắt buộc phải chọn số chỗ

--- a/project/views/admin/Manage/Vehicle/AddVehicle.hbs
+++ b/project/views/admin/Manage/Vehicle/AddVehicle.hbs
@@ -24,7 +24,7 @@
 
                         <div class="mb-3">
                             <label for="so_cho" class="form-label fw-bold">Số chỗ</label>
-                            <select name="so_cho" id="so_cho" class="form-control">
+                            <select name="so_cho" id="so_cho" class="form-control" required>
                                 <option value="">Chọn số chỗ</option>
                                 <option value="16">16 chỗ</option>
                                 <option value="30">30 chỗ</option>
