feat(auth): Cập nhật thông báo khi sai

--- a/project/views/home/login.hbs
+++ b/project/views/home/login.hbs
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/css/signin_signout.css" />
 </head>
 
-<section class="auth-section" style="background: url('{{background}}')">
+<section class="auth-section" style="background: url('{{background}}') no-repeat center center / cover;">
 
     <div class="container">
         {{#if error_message}}
