feat: Thêm 'Tạo tài khoản admin'

--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -38,7 +38,7 @@
             <hr>
 
 
-            <li class="nav-item" data-toggle="tooltip" data-placement="right">
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Quản lý Lịch trình">
                 <a class="nav-link" href="/admin/manageschedule">
                     <i class="fa fa-thin fa-calendar"></i>
                     <span class="nav-link-text">Quản lý Lịch trình</span>
@@ -46,7 +46,7 @@
             </li>
 
 
-            <li class="nav-item" data-toggle="tooltip" data-placement="right">
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Quản lý Tour">
                 <a class="nav-link" href="/admin/managetour">
                     <i class="fa fa-regular fa-compass"></i>
                     <span class="nav-link-text">Quản lý Tour</span>
@@ -54,21 +54,21 @@
             </li>
 
 
-            <li class="nav-item" data-toggle="tooltip" data-placement="right">
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Quản lý Địa điểm">
                 <a class="nav-link" href="/admin/managelocations">
                     <i class="fa fa-solid fa-location-arrow"></i>
                     <span class="nav-link-text">Quản lý Địa điểm</span>
                 </a>
             </li>
 
-            <li class="nav-item" data-toggle="tooltip" data-placement="right">
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Quản lý Phương tiện">
                 <a class="nav-link" href="/admin/managevehicle">
                     <i class="fa fa-solid fa-bus"></i>
                     <span class="nav-link-text">Quản lý Phương tiện</span>
                 </a>
             </li>
 
-            <li class="nav-item" data-toggle="tooltip" data-placement="right">
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Quản lý Đối tác khách sạn">
                 <a class="nav-link" href="/admin/managehotel">
                     <i class="fa fa-solid fa-hotel"></i>
                     <span class="nav-link-text">Quản lý Đối tác khách sạn</span>
@@ -77,7 +77,14 @@
 
             <hr>
 
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tạo tài khoản admin">
+                <a class="nav-link" href="/admin/createadmin">
+                    <i class="fa fa-fw fa-link"></i>
+                    <span class="nav-link-text">Tạo tài khoản admin</span>
+                </a>
+            </li>
+
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Cập nhật mật khẩu">
                 <a class="nav-link" href="/admin/update_password">
                     <i class="fa fa-fw fa-link"></i>
                     <span class="nav-link-text">Cập nhật mật khẩu</span>
