ui: Thêm icon cho tạo admin và cập nhật mật khẩu

--- a/project/views/layouts/admin.hbs
+++ b/project/views/layouts/admin.hbs
@@ -79,8 +79,8 @@
 
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tạo tài khoản admin">
                 <a class="nav-link" href="/admin/createadmin">
-                    <i class="fa fa-fw fa-link"></i>
-                    <span class="nav-link-text">Tạo tài khoản admin</span>
+                    <i class="fa fa-regular fa-user"></i>
+                    <span class="nav-link-text"> Tạo tài khoản admin</span>
                 </a>
             </li>
 
@@ -88,6 +88,15 @@
                 <a class="nav-link" href="/admin/update_password">
                     <i class="fa fa-fw fa-link"></i>
                     <span class="nav-link-text">Cập nhật mật khẩu</span>
+                </a>
+            </li>
+
+            <hr>
+
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Giao diện người dùng">
+                <a class="nav-link" href="/">
+                    <i class="fa fa-solid fa-arrow-left"></i>
+                    <span class="nav-link-text">Sang giao diện người dùng</span>
                 </a>
             </li>
 
